# caRtola

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  README.md  pyproject.toml  roadmap.md
.github/workflows/: ci.yml  quality.yml
data/01_raw/2023/: rodada-1.csv  rodada-18.csv
data/01_raw/2024/: rodada-17.csv
data/01_raw/2026/: rodada-13.csv
data/01_raw/fixtures/: club_mapping.csv
docs/superpowers/plans/: 2026-04-26-cartola-backtesting.md  2026-04-27-cartola-available-now-features.md  2026-04-27-cartola-fixture-context.md  2026-04-27-cartola-multiseason-compatibility-audit.md  2026-04-27-cartola-strict-fixture-snapshots.md  2026-04-27-footystats-compatibility-audit.md  2026-04-28-footystats-ppg-ablation-report.md  2026-04-28-footystats-ppg-integration.md  2026-04-28-footystats-ppg-xg-ablation.md  2026-04-28-live-squad-recommendation.md  2026-04-29-captain-aware-optimizer.md  2026-04-29-live-market-round-capture.md  2026-04-29-one-command-live-round-workflow.md  2026-04-29-strict-round-fixture-capture-command.md  2026-04-30-backtest-parallelism.md  2026-04-30-backtest-performance-cache.md  2026-04-30-backtest-rich-cli-output.md  2026-04-30-matchup-fixture-coverage-audit.md  2026-04-30-model-feature-experiment-runner.md  2026-05-01-strict-typing-annotations.md
docs/superpowers/specs/: 2026-04-26-cartola-backtesting-design.md  2026-04-27-cartola-available-now-features-design.md  2026-04-27-cartola-fixture-context-design.md  2026-04-27-cartola-multiseason-compatibility-audit-design.md  (+14 more)
scripts/: audit_backtest_compatibility.py  audit_footystats_compatibility.py  audit_matchup_fixture_coverage.py  capture_fixture_snapshot.py  capture_market_round.py  capture_strict_round_fixture.py  generate_strict_fixtures.py  import_fixture_schedule.py  pyrepo-check  recommend_squad.py  run_footystats_ablation.py  run_live_round.py  run_model_experiments.py
src/cartola/: __main__.py  download_data.py  update_readme.py
src/tests/: test_run.py
(+179 files in other folders)
