[project]
name = "cartola"
version = "0.1.0"
description = "Extração de dados da API do CartolaFC, análise exploratória dos dados e modelos preditivos em R e Python - 2014-22. [EN] Data munging, analysis and modeling of CartolaFC - the most popular fantasy football game in Brazil and maybe in the world. Data cover years 2014-22"
authors = [{ name = "Henrique Gomide", email = "henriquepgomide@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "kedro==0.18.2",
    "numpy>=2,<3",
    "pandas>=2.2,<3",
    "pulp>=2.9,<3",
    "requests>=2.31,<3",
    "rich>=12.6,<13",
    "scikit-learn>=1.6.1,<2",
    "Unidecode>=1.3.6,<2",
]

[dependency-groups]
dev = [
    "bandit>=1.9.4,<2",
    "pre-commit>=4.0,<5",
    "pytest>=7.4,<8",
    "pytest-cov>=4.1,<5",
    "pytest-mock>=3.10,<4",
    "ruff>=0.15.12,<1",
    "ty>=0.0.32,<0.1",
]
kedro-tools = [
    "kedro-docker>=0.3,<0.4",
    "kedro-telemetry>=0.2,<0.3",
    "kedro-viz>=5.1,<6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cartola"]

[tool.uv]
default-groups = ["dev"]

[tool.kedro]
package_name = "cartola"
project_name = "caRtola"
project_version = "0.18.2"

[tool.ruff]
line-length = 120
target-version = "py310"
extend-exclude = ["notebooks"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]

[tool.pytest.ini_options]
addopts = """
--cov-report term-missing \
--cov src/cartola -ra"""

[tool.coverage.report]
fail_under = 0
show_missing = true
exclude_lines = ["pragma: no cover", "raise NotImplementedError"]

[tool.ty.environment]
python-version = "3.13"
python-platform = "linux"
root = ["./src"]

[tool.ty.src]
include = ["src/cartola"]
respect-ignore-files = true

[tool.bandit]
exclude_dirs = ["notebooks", "data", ".venv", ".worktrees"]
